--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.0",
     "express-rate-limiter": "^1.3.1",
     "express-session": "^1.17.2",
@@ -28,6 +29,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "xss-clean": "^0.1.1"
   }
 }
